# etb

./: CMakeLists.txt  main.c  protocol_command.c  protocol_command.h  ws_server.c  ws_server.h
client/: index.html
client/css/: main.css
client/js/: camera.js  drpai.js  main.js  websocket.js
commands/: camera.c  handler.c  handler.h  internal_handlers.h
plugins/camera/: camera.c  camera.h  handler.c  handler.h  jpeg.c  jpeg.h  protocol.c  protocol.h
plugins/drpai/: drpai.c  drpai.h  model_yolo.c  model_yolov3.c  models.c  models.h  protocol.c  protocol.h
systemd/: etb.service
